--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -1,71 +1,148 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="360.0" prefWidth="288.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="530.0" prefWidth="288.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
    <children>
+      <Rectangle fill="#0000001a" height="154.0" layoutX="14.0" layoutY="329.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="2.0" width="259.0" />
       <Label layoutX="14.0" layoutY="7.0" prefHeight="0.0" prefWidth="127.0" text="LOCAL coordinates:">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <TextField fx:id="txtLocalN1" alignment="CENTER_RIGHT" layoutX="14.0" layoutY="47.0" prefHeight="26.0" prefWidth="120.0">
+      <TextField fx:id="txtLocalN1" alignment="CENTER_RIGHT" layoutX="29.0" layoutY="47.0" prefHeight="26.0" prefWidth="120.0">
          <font>
             <Font size="14.0" />
          </font></TextField>
-      <Label layoutX="14.0" layoutY="33.0" text="Northing:" />
-      <Label layoutX="152.0" layoutY="33.0" text="Easting:" />
-      <TextField fx:id="txtLocalE1" alignment="CENTER_RIGHT" layoutX="152.0" layoutY="47.0" prefHeight="26.0" prefWidth="120.0">
+      <Label layoutX="29.0" layoutY="33.0" text="Northing:" />
+      <Label layoutX="153.0" layoutY="33.0" text="Easting:" />
+      <TextField fx:id="txtLocalE1" alignment="CENTER_RIGHT" layoutX="154.0" layoutY="47.0" prefHeight="26.0" prefWidth="120.0">
          <font>
             <Font size="14.0" />
          </font></TextField>
-      <Label layoutX="14.0" layoutY="85.0" text="GLOBAL coordinates:">
+      <Label layoutX="14.0" layoutY="152.0" text="GLOBAL coordinates:">
          <font>
             <Font size="14.0" />
          </font></Label>
-      <Label layoutX="14.0" layoutY="108.0" text="Northing:" />
-      <Label layoutX="152.0" layoutY="108.0" text="Easting:" />
-      <TextField fx:id="txtGlobalN" alignment="CENTER_RIGHT" layoutX="14.0" layoutY="122.0" prefHeight="22.0" prefWidth="120.0">
+      <Label layoutX="29.0" layoutY="175.0" text="Northing:" />
+      <Label layoutX="154.0" layoutY="175.0" text="Easting:" />
+      <TextField fx:id="txtGlobalN1" alignment="CENTER_RIGHT" layoutX="29.0" layoutY="189.0" prefHeight="22.0" prefWidth="120.0">
          <font>
             <Font size="14.0" />
          </font>
       </TextField>
-      <TextField fx:id="txtGlobalE" alignment="CENTER_RIGHT" layoutX="152.0" layoutY="122.0" prefHeight="22.0" prefWidth="120.0">
+      <TextField fx:id="txtGlobalE1" alignment="CENTER_RIGHT" layoutX="154.0" layoutY="189.0" prefHeight="22.0" prefWidth="120.0">
          <font>
             <Font size="14.0" />
          </font>
       </TextField>
-      <Label layoutX="14.0" layoutY="216.0" text="Project Base Point:">
+      <Label layoutX="49.0" layoutY="343.0" text="Project Base Point:">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
-      <Button fx:id="btnCompute" layoutX="14.0" layoutY="165.0" mnemonicParsing="false" onAction="#btnOnClick" prefHeight="22.0" prefWidth="259.0" text="COMPUTE">
+      <Button fx:id="btnCompute" layoutX="14.0" layoutY="293.0" mnemonicParsing="false" onAction="#btnOnClick" prefHeight="22.0" prefWidth="260.0" text="COMPUTE">
          <font>
             <Font size="13.0" />
          </font>
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets>
       </Button>
-      <Label layoutX="45.0" layoutY="249.0" text="Northing:" />
-      <Label alignment="CENTER_RIGHT" layoutX="45.0" layoutY="281.0" text="Easting:" />
-      <Label alignment="CENTER_RIGHT" layoutX="45.0" layoutY="313.0" text="Angle to True North:" />
-      <TextField fx:id="txtPBPN" alignment="CENTER_RIGHT" layoutX="108.0" layoutY="242.0" prefHeight="28.0" prefWidth="120.0" promptText="0000000.000">
+      <Label layoutX="49.0" layoutY="376.0" text="Northing:" />
+      <Label alignment="CENTER_RIGHT" layoutX="49.0" layoutY="408.0" text="Easting:" />
+      <Label alignment="CENTER_RIGHT" layoutX="49.0" layoutY="440.0" text="Angle to True North:" />
+      <TextField fx:id="txtPBPN" alignment="CENTER_RIGHT" layoutX="112.0" layoutY="369.0" prefHeight="28.0" prefWidth="120.0" promptText="0000000.000">
          <font>
             <Font size="14.0" />
          </font>
       </TextField>
-      <TextField fx:id="txtPBPE" alignment="BOTTOM_RIGHT" layoutX="108.0" layoutY="274.0" prefHeight="28.0" prefWidth="120.0" promptText="000000.000">
+      <TextField fx:id="txtPBPE" alignment="BOTTOM_RIGHT" layoutX="112.0" layoutY="401.0" prefHeight="28.0" prefWidth="120.0" promptText="000000.000">
          <font>
             <Font size="14.0" />
          </font>
       </TextField>
-      <TextField fx:id="txtPBPAngle" alignment="CENTER_RIGHT" layoutX="159.0" layoutY="306.0" prefHeight="28.0" prefWidth="69.0" promptText="0.0000">
+      <TextField fx:id="txtPBPAngle" alignment="CENTER_RIGHT" layoutX="163.0" layoutY="433.0" prefHeight="28.0" prefWidth="69.0" promptText="0.0000">
          <font>
             <Font size="14.0" />
          </font>
       </TextField>
+      <Label layoutX="14.0" layoutY="52.0" text="1">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Label>
+      <TextField fx:id="txtLocalN2" alignment="CENTER_RIGHT" layoutX="29.0" layoutY="80.0" prefHeight="26.0" prefWidth="120.0">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </TextField>
+      <TextField fx:id="txtLocalE2" alignment="CENTER_RIGHT" layoutX="154.0" layoutY="80.0" prefHeight="26.0" prefWidth="120.0">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </TextField>
+      <Label layoutX="14.0" layoutY="85.0" text="2">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Label>
+      <TextField fx:id="txtLocalN3" alignment="CENTER_RIGHT" layoutX="29.0" layoutY="113.0" prefHeight="26.0" prefWidth="120.0">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </TextField>
+      <TextField fx:id="txtLocalE3" alignment="CENTER_RIGHT" layoutX="154.0" layoutY="113.0" prefHeight="26.0" prefWidth="120.0">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </TextField>
+      <Label layoutX="14.0" layoutY="118.0" text="3">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Label>
+      <TextField fx:id="txtGlobalN2" alignment="CENTER_RIGHT" layoutX="29.0" layoutY="222.0" prefHeight="26.0" prefWidth="120.0">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </TextField>
+      <TextField fx:id="txtGlobalE2" alignment="CENTER_RIGHT" layoutX="154.0" layoutY="222.0" prefHeight="22.0" prefWidth="120.0">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </TextField>
+      <TextField fx:id="txtGlobalN3" alignment="CENTER_RIGHT" layoutX="29.0" layoutY="255.0" prefHeight="26.0" prefWidth="120.0">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </TextField>
+      <TextField fx:id="txtGlobalE3" alignment="CENTER_RIGHT" layoutX="154.0" layoutY="255.0" prefHeight="22.0" prefWidth="120.0">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </TextField>
+      <Label layoutX="14.0" layoutY="194.0" text="1">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="14.0" layoutY="227.0" text="2">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="14.0" layoutY="260.0" text="3">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="18.0" layoutY="501.0" text="Różnica współrzędnych na punkcie 3:" />
    </children>
 </Pane>
